Gradle refactoring + Java 13 upgrade